Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-19668

QS60Style: Checked state is not shown on highlighted itemview item

XMLWordPrintable

    • e86393a43b6f80abcb33747b9d1c1f65bcef0dc8

      In QS60Style an itemview item with checkbox and text is not shown correctly when highlighted.
      The checked state is not applied until item is drawn again without highlight.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            samimeri Sami Merila (Inactive)
            samimeri Sami Merila (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes