QS60Style: Checked state is not shown on highlighted itemview item

An itemview item with checkstate and highlight is drawn incorrectly
without checked state.

Consolidate check state drawing logic to happen into one place to
avoid incorrect check states.

Task-number: QTBUG-19668
Reviewed-by: Miikka Heikkinen